--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,15 +1,16 @@
 .header {
     display:flex;
-    justify-content: center; /* 요소 하나를 중앙배치, 나머지는 좌우배치   */
-    align-items: center; /*가운데 정렬*/
+    justify-content: space-between;
+    align-items: center;
     padding: 10px 20px;
+    background-color: #eae8e8;
+    border-bottom: 1px solid #000000;
 }
 
 .logo {
     height: 50px;
     width: auto;
-    margin: auto;
-    border: 1px solid;
+    border: 1px solid black;
     border-radius: 5px;
 }
 
@@ -17,7 +18,7 @@
     margin-left: 10px;
 }
 
-.header div {
+.header .headerButton{
     display: flex;
     align-items: center;
     margin-left: auto;
