--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -63,7 +63,7 @@ button {
     padding: 10px 20px;
     font-size: 16px;
     color: white;
-    background-color: #2659e7;
+    background-color: #1F1122;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -72,15 +72,15 @@ button {
 }
 
 button:hover {
-    background-color: #0036b3;
+    background-color: #374051;
 }
 
 button[type="button"] {
-    background-color: #777;
+    background-color: #374051;
 }
 
 button[type="button"]:hover {
-    background-color: #555;
+    background-color: #374051;
 
 }
 .available {
