--- a/src/pages/Party.css
+++ b/src/pages/Party.css
@@ -1,47 +1,49 @@
 .party-container {
     display: flex;
-    justify-content: space-between;
-    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
 }
 
 .party-details {
-    flex: 1;
-    padding-right: 20px;
-    border-right: 1px solid #ddd;
+    width: 100%;
+    max-width: 800px;
+    margin-bottom: 20px;
 }
 
 .party-info {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .party-thumbnail {
     width: 100%;
-    max-width: 300px;
-    margin: 10px 0;
+    max-width: 400px;
+    height: auto;
 }
 
 .party-participants {
-    flex: 0.5;
-    padding-left: 20px;
-}
-
-.party-participants h2 {
+    width: 100%;
+    max-width: 400px;
     margin-bottom: 20px;
 }
 
-.party-participants ul {
-    list-style: none;
-    padding: 0;
+.party-comments {
+    width: 100%;
+    max-width: 800px;
 }
 
-.party-participants li {
-    padding: 5px 0;
+.comment-input {
+    display: flex;
+    flex-direction: column;
 }
 
-.party-participants button {
-    display: block;
-    margin: 10px 0;
-    padding: 10px 20px;
-    font-size: 14px;
-    cursor: pointer;
+.comment-input textarea {
+    width: 100%;
+    height: 80px;
+    margin-top: 10px;
+}
+
+.comment-input button {
+    align-self: flex-end;
+    margin-top: 10px;
 }
