--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -5,29 +5,46 @@
     padding: 10px 20px;
     background-color: #FFFFFF;
     border-bottom: 3px solid #1F1122;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.logo {
-    height: 50px;
+.header__logo-container {
+    height: auto;
     width: auto;
-    background-color: white;
     border: 3px solid #1F1122;
     border-radius: 5px;
 }
 
-.header button {
-    margin-left: 10px;
-    background-color: #1F1122;
+.header__logo {
+    height: 50px;
+}
+.header__logo:hover {
+    background-color: #374051;
+}
+
+.header__buttons {
+    display: flex;
+    align-items: center;
     border: none;
     border-radius: 5px;
 }
 
-.header button:hover {
-    background-color: #374051;
+.header__buttons-group {
+    display: flex;
+    gap: 10px;
 }
 
-.header .headerButton{
-    display: flex;
-    align-items: center;
-    margin-left: auto;
+.header__button {
+    padding: 10px 20px;
+    font-size: 14px;
+    color: white;
+    background-color: #1F1122;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.2s;
+}
+
+.header__button:hover {
+    background-color: #374051;
 }
