--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -132,10 +132,19 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.main__post-thumbnail {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border: none;
+    border-radius: 5px;
+    margin: 10px;
+}
+
 .main__post-default {
-    width: 30%;
-    max-width: 300px;
-    height: auto;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
     border: none;
     border-radius: 5px;
     margin: 10px;
@@ -146,6 +155,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
+    width: 70%;
 }
 
 .main__post-id,
@@ -156,7 +166,7 @@
 .main__post-contents {
     margin: 5px 0;
     display: -webkit-box;
-    -webkit-line-clamp: 3; /* Number of lines to show */
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
