--- a/src/pages/Party.css
+++ b/src/pages/Party.css
@@ -134,8 +134,8 @@
 
 .party__comment-input-actions {
     display: flex;
-    justify-content: flex-end; /* 오른쪽 정렬 */
-    gap: 10px; /* 버튼 사이 간격 */
+    justify-content: flex-end;
+    gap: 10px;
     margin-top: 10px;
 }
 
@@ -173,4 +173,50 @@
     border: 1px solid #1F1122;
     border-radius: 5px;
     background-color: #ffffff;
+}
+
+.party__edit-images {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+}
+
+.party__edit-image-item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+}
+
+.party__edit-image-item img {
+    width: 300px;
+    height: 300px;
+    border-radius: 4px;
+}
+
+.party__edit-image-item button {
+    width: 100px;
+    height: 40px;
+    white-space: nowrap;
+    font-size: 14px;
+    background-color: #8d4343;
+    transition: background-color 0.3s, box-shadow 0.2s;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 5px 10px;
+}
+
+.party__join-button:hover,
+.party__leave-button:hover,
+.party__manage-button:hover,
+.party__vote-button:hover,
+.party__edit-button:hover,
+.party__edit-submit:hover,
+.party__edit-cancel:hover,
+.party__comment-submit:hover,
+.party__edit-image-item button:hover{
+    background-color: #374051;
 }
