--- a/src/pages/NewPost.css
+++ b/src/pages/NewPost.css
@@ -46,34 +46,34 @@
 }
 
 .submit-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 20%; /* 필요한 경우 너비 조정 */
-    height: 50px; /* 높이를 동일하게 설정 */
-    line-height: 30px;
-    background-color: #5bc0de;
-    color: #fff;
-    margin-left: auto; /* 오른쪽 끝에 배치 */
+    padding: 10px 20px !important;
+    font-size: 16px !important;
+    border: none !important;
+    border-radius: 4px !important;
+    cursor: pointer !important;
+    width: 20% !important; /* 필요한 경우 너비 조정 */
+    height: 50px !important; /* 높이를 동일하게 설정 */
+    line-height: 30px !important;
+    background-color: #5bc0de !important;
+    color: #fff !important;
+    margin-right: auto !important; /* 오른쪽 끝에 배치 */
 }
 
 .cancel-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 20%; /* 필요한 경우 너비 조정 */
-    height: 50px; /* 높이를 동일하게 설정 */
-    line-height: 30px;
-    background-color: #d9534f;
-    color: #fff;
-    margin-right: auto; /* 왼쪽 끝에 배치 */
+    padding: 10px 20px !important;
+    font-size: 16px !important;
+    border: none !important;
+    border-radius: 4px !important;
+    cursor: pointer !important;
+    width: 20% !important; /* 필요한 경우 너비 조정 */
+    height: 50px !important; /* 높이를 동일하게 설정 */
+    line-height: 30px !important;
+    background-color: #d9534f !important;
+    color: #fff !important;
+    margin-left: auto !important; /* 왼쪽 끝에 배치 */
 }
 
 .submit-button:hover,
 .cancel-button:hover {
-    opacity: 0.8;
+    opacity: 0.8 !important;
 }
