--- a/src/pages/MyPage.css
+++ b/src/pages/MyPage.css
@@ -1,5 +1,3 @@
-/* MyPage.css */
-
 .mypageContainer {
     max-width: 1000px;
     margin: 0 auto;
@@ -80,9 +78,9 @@ label {
 }
 
 .remove-button {
-    background-color: #ff6347; /* Red for remove button */
+    background-color: #ff6347;
 }
 
 .remove-button:hover {
-    background-color: #ff4500; /* Darker red on hover */
+    background-color: #ff4500;
 }
