--- a/src/pages/UserEdit.css
+++ b/src/pages/UserEdit.css
@@ -1,19 +1,26 @@
-/* UserEdit.css */
-
-.userEditContainer {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 40px;
-    font-family: 'Arial', sans-serif;
-    background-color: #f1f1f1;
-    border-radius: 15px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+.user-edit__container {
     display: flex;
-    flex-direction: column;
-    align-items: normal;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    color: black;
+    background-color: #F4F4F9;
 }
 
-.userEditContainer h1 {
+.user-edit__page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 1000px;
+    background-color: #FFFFFF;
+    padding: 20px;
+    border: 4px solid #374999;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+.user-edit__title {
     text-align: center;
     margin-bottom: 30px;
     color: #333;
@@ -21,12 +28,12 @@
     font-weight: bold;
 }
 
-.formGroup {
+.user-edit__form-group {
     width: 100%;
     margin-bottom: 20px;
 }
 
-.formGroup label {
+.user-edit__form-group label {
     font-size: 1.2em;
     font-weight: 500;
     margin-bottom: 10px;
@@ -34,7 +41,9 @@
     color: #555;
 }
 
-.formGroup input, .formGroup select, .formGroup textarea {
+.user-edit__form-group input,
+.user-edit__form-group select,
+.user-edit__form-group textarea {
     width: 100%;
     padding: 15px;
     border: 1px solid #ccc;
@@ -46,20 +55,20 @@
     box-sizing: border-box;
 }
 
-.formGroup textarea {
+.user-edit__form-group textarea {
     resize: vertical;
     height: 100px;
 }
 
-.buttonContainer {
+.user-edit__button-container {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
     width: 100%;
-    align-items: flex-end; /* 오른쪽 정렬 */
+    align-items: flex-end;
 }
 
-.buttonContainer button {
+.user-edit__button-container button {
     padding: 10px 15px;
     border: none;
     border-radius: 8px;
@@ -72,11 +81,11 @@
     text-decoration: none;
 }
 
-.buttonContainer button:hover {
-    background-color: #d9534f;
+.user-edit__button-container button:hover {
+    background-color: #374051;
 }
 
-button[disabled] {
+.user-edit__button-container button[disabled] {
     cursor: not-allowed;
     background-color: #ccc;
 }
