--- a/src/pages/MyParty.css
+++ b/src/pages/MyParty.css
@@ -1,42 +1,69 @@
 /* MyParty.css */
 
 .mypartyContainer {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
-    padding: 20px;
-    font-family: Arial, sans-serif;
+    padding: 40px;
+    font-family: 'Arial', sans-serif;
+    background-color: #f1f1f1;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .mypartyContainer h1 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     color: #333;
+    font-size: 2.5em;
+    font-weight: normal;
 }
 
 .partyList {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
 .partyItem {
-    background: #f9f9f9;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: background 0.3s;
+    transition: background-color 0.3s, transform 0.3s;
 }
 
 .partyItem:hover {
-    background: #ececec;
+    background-color: lightblue;
+    transform: translateY(-5px);
 }
 
 .partyItem h3 {
-    margin: 0 0 10px 0;
+    margin: 0 0 15px;
     color: #333;
+    font-size: 1.8em;
+    font-weight: bold;
 }
 
 .partyItem p {
-    margin: 5px 0;
+    margin: 10px 0;
     color: #666;
+    line-height: 1.7;
+}
+
+@media (max-width: 600px) {
+    .mypartyContainer {
+        padding: 20px;
+    }
+
+    .partyItem {
+        padding: 20px;
+    }
+
+    .mypartyContainer h1 {
+        font-size: 2em;
+    }
+
+    .partyItem h3 {
+        font-size: 1.5em;
+    }
 }
