--- a/src/pages/NewPost.css
+++ b/src/pages/NewPost.css
@@ -42,28 +42,38 @@
 .form-buttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-.cancel-button,
 .submit-button {
     padding: 10px 20px;
     font-size: 16px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    width: 20%; /* 필요한 경우 너비 조정 */
+    height: 50px; /* 높이를 동일하게 설정 */
+    line-height: 30px;
+    background-color: #5bc0de;
+    color: #fff;
+    margin-left: auto; /* 오른쪽 끝에 배치 */
 }
 
 .cancel-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 20%; /* 필요한 경우 너비 조정 */
+    height: 50px; /* 높이를 동일하게 설정 */
+    line-height: 30px;
     background-color: #d9534f;
     color: #fff;
+    margin-right: auto; /* 왼쪽 끝에 배치 */
 }
 
-.submit-button {
-    background-color: #5bc0de;
-    color: #fff;
-}
-
-.cancel-button:hover,
-.submit-button:hover {
+.submit-button:hover,
+.cancel-button:hover {
     opacity: 0.8;
 }
